tests/positive/Imports/M.mjuvix
module M;
  axiom T : Type;
end;
