tests/negative/MultipleExportConflict.mjuvix
module MultipleExportConflict;

  module A;
     axiom e : Type;
  end;
  open A public;
  axiom e : Type;
end;